# pyramid_jinja2

./: .coverage  .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTORS.txt  MANIFEST.in  README.rst  README.txt  appveyor.yml  pyproject.toml  rtd.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-tests.yml  ci-windows.yml
demo/: __init__.py  helloworld.jinja2  test_demo.py
docs/: .gitignore  Makefile  api.rst  changes.rst  conf.py  glossary.rst  i18n.rst  index.rst
pyramid_jinja2/: __init__.py  compat.py  configure.zcml  filters.py  i18n.py  paster.py  settings.py
pyramid_jinja2/demo/: __init__.py  helloworld.jinja2  test_demo.py  tests.py
pyramid_jinja2/demo/locale/: messages.pot
pyramid_jinja2/demo/locale/fr/LC_MESSAGES/: messages.mo  messages.po
pyramid_jinja2/paster_template/: +project+.ini_tmpl  development.ini_tmpl  setup.cfg_tmpl  setup.py_tmpl
pyramid_jinja2/paster_template/+package+/: __init__.py_tmpl  configure.zcml  run.py_tmpl  tests.py_tmpl  views.py_tmpl
pyramid_jinja2/paster_template/+package+/templates/: mytemplate.jinja2
pyramid_jinja2/scaffolds/: __init__.py
pyramid_jinja2/scaffolds/jinja2_starter/: development.ini_tmpl  setup.cfg_tmpl  setup.py_tmpl
pyramid_jinja2/scaffolds/jinja2_starter/+package+/: __init__.py_tmpl  models.py  tests.py_tmpl  views.py_tmpl
pyramid_jinja2/scaffolds/jinja2_starter/+package+/locale/: +project+.pot
pyramid_jinja2/scaffolds/jinja2_starter/+package+/templates/: mytemplate.jinja2  mytemplate.jinja2_tmpl
pyramid_jinja2/tests/: base.py  extensions.py  test_ext.py  test_filters.py  test_it.py  test_settings.py
pyramid_jinja2/tests/locale/: messages.pot
pyramid_jinja2/tests/locale/en/LC_MESSAGES/: messages.mo  messages.po
pyramid_jinja2/tests/templates/: extends_abs.jinja2  extends_missing.jinja2  extends_relbase.jinja2  i18n.jinja2  newstyle.jinja2  tests_and_filters.jinja2
pyramid_jinja2/tests/templates/baz1/: base.jinja2  mytemplate.jinja2
pyramid_jinja2/tests/templates/baz2/: base.jinja2  mytemplate.jinja2
pyramid_jinja2/tests/templates/deep/: base.jinja2  leaf.jinja2
pyramid_jinja2/tests/templates/deep/sub/: leaf.jinja2  nav.jinja2
repoze/bfg/jinja2/: __init__.py  bindings.py  configure.zcml  paster.py
repoze/bfg/jinja2/tests/: test_bindings.py
src/pyramid_jinja2/: __init__.py  configure.zcml  filters.py  i18n.py  settings.py
src/pyramid_jinja2/scaffolds/: __init__.py
src/pyramid_jinja2/scaffolds/jinja2_starter/: MANIFEST.in_tmpl  development.ini_tmpl  setup.py_tmpl
tests/: babel.cfg  base.py  extensions.py  test_ext.py  test_filters.py  test_it.py  test_settings.py
tests/locale/en/LC_MESSAGES/: messages.po
tests/templates/: extends_spec.jinja2  helloworld.jinja2  i18n.jinja2  newstyle.jinja2
tests/templates/baz1/: mytemplate.jinja2
tests/templates/baz2/: mytemplate.jinja2
tests/templates/deep/: forms.jinja2  leaf.jinja2
tests/templates/deep/sub/: base.jinja2  leaf.jinja2  nav.jinja2
(+11 files in other folders)
