[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[bdist_wheel]
universal = 1

[aliases]
dev = develop easy_install pyramid_jinja2[testing]
docs = develop easy_install pyramid_jinja2[docs]

[metadata]
license_file = LICENSE.txt

[check-manifest]
ignore =
    .gitignore
    .gitattributes
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true

[tool:pytest]
python_files = test_*.py
testpaths =
    pyramid_jinja2/demo
    pyramid_jinja2/tests
addopts = -W always
