[metadata]
name = pyramid_jinja2
version = 2.10
description = Jinja2 template bindings for the Pyramid web framework
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = web wsgi pylons pyramid jinja2
license = BSD-derived (Repoze)
license_files =
    LICENSE.txt
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Pyramid
    License :: Repoze Public License
url = https://github.com/Pylons/pyramid_jinja2
project_urls =
    Documentation = https://docs.pylonsproject.org/projects/pyramid_jinja2/en/latest/
    Changelog = https://github.com/Pylons/pyramid_jinja2/blob/main/CHANGES.rst
    Issue Tracker = https://github.com/Pylons/pyramid_jinja2/issues

author = Rocky Burt
author_email = pylons-discuss@googlegroups.com
maintainer = Pylons Project
maintainer_email = pylons-discuss@googlegroups.com

[options]
package_dir=
    =src
packages = find_namespace:
include_package_data = True
python_requires = >=3.7.0
install_requires =
    jinja2>=2.5.0,!=2.11.0,!=2.11.1,!=2.11.2
    markupsafe
    pyramid>=1.3.0  # pyramid.path.DottedNameResolver
    zope.deprecation

[options.packages.find]
where = src

[options.entry_points]
pyramid.scaffold =
    pyramid_jinja2_starter = pyramid_jinja2.scaffolds:Jinja2ProjectTemplate

[options.extras_require]
testing =
    webtest
    coverage
    pytest>=5.4.2
    pytest-cov

docs =
    pylons-sphinx-themes >= 0.3
    sphinx>=1.7.5

[check-manifest]
ignore-bad-ideas = *.mo

[tool:pytest]
python_files = test_*.py
testpaths =
    demo
    tests
addopts = -W always --cov
